[package]
name = "yew_3d_app"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["console", "Window", "Document", "HtmlCanvasElement", "WebGlRenderingContext"] }
yew = { version = "0.21.0", features = ["csr"] }
